// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Design System/TextArea Text Area Sizes 1`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  -webkit-transition: background-color 0.25s,box-shadow 0.25s,border-color 0.25s;
  transition: background-color 0.25s,box-shadow 0.25s,border-color 0.25s;
  box-shadow: 0 0 0 0.0625rem #cfd7e5;
  border-radius: 0.25rem;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  opacity: 1;
  cursor: auto;
  min-width: 9.375rem;
  height: auto;
  background-color: white;
  width: auto;
}

.emotion-1:hover {
  background-color: #f3f5f8;
}

.emotion-1:focus-within {
  box-shadow: 0 0 0 0.125rem #1451dc;
  background-color: #e7ebf2;
}

.emotion-2 {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  vertical-align: top;
  width: -webkit-fill-available;
  width: -moz-available;
  width: fill-available;
  padding: 0.5rem;
}

.emotion-2>div {
  position: relative;
}

.emotion-3 {
  width: 100%;
}

.emotion-4 {
  background: transparent;
  border: none;
  color: #0f0f17;
  display: block;
  position: relative;
  z-index: 1;
  font-size: 0.9375rem;
  text-overflow: ellipsis;
  width: 9.375rem;
  min-width: 9.375rem;
  resize: both;
}

.emotion-4+label {
  font-size: 0.9375rem;
}

.emotion-4:focus {
  outline: none;
}

.emotion-4::-webkit-input-placeholder {
  color: #5f6c85;
}

.emotion-4::-moz-placeholder {
  color: #5f6c85;
}

.emotion-4:-ms-input-placeholder {
  color: #5f6c85;
}

.emotion-4::placeholder {
  color: #5f6c85;
}

.emotion-4:not(:focus):placeholder-shown+label {
  font-weight: normal;
}

.emotion-4:focus+label,
.emotion-4:not(:placeholder-shown)+label {
  -webkit-transform: translate(0.1875rem, -35%) scale(0.8);
  -moz-transform: translate(0.1875rem, -35%) scale(0.8);
  -ms-transform: translate(0.1875rem, -35%) scale(0.8);
  transform: translate(0.1875rem, -35%) scale(0.8);
  font-weight: 700;
}

.emotion-4:disabled {
  cursor: not-allowed;
}

<div
  style={
    Object {
      "borderRadius": 10,
      "flex": 1,
      "flexDirection": "column",
      "padding": 5,
      "position": "relative",
      "width": "100%",
    }
  }
>
  <div
    style={
      Object {
        "margin": 15,
      }
    }
  >
    <div
      className="emotion-0"
    >
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <div
          className="emotion-1"
        >
          <div
            className="emotion-2"
          >
            <div
              className="emotion-3"
            >
              <textarea
                className="emotion-4"
                cols={10}
                placeholder="Label"
                required={false}
                rows={10}
              />
            </div>
          </div>
        </div>
      </div>
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <div
          className="emotion-1"
        >
          <div
            className="emotion-2"
          >
            <div
              className="emotion-3"
            >
              <textarea
                className="emotion-4"
                cols={35}
                placeholder="Label"
                required={false}
                rows={20}
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Design System/TextArea Text Area Types 1`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  -webkit-transition: background-color 0.25s,box-shadow 0.25s,border-color 0.25s;
  transition: background-color 0.25s,box-shadow 0.25s,border-color 0.25s;
  box-shadow: 0 0 0 0.0625rem #cfd7e5;
  border-radius: 0.25rem;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  opacity: 1;
  cursor: auto;
  min-width: 9.375rem;
  height: auto;
  background-color: white;
  width: auto;
}

.emotion-1:hover {
  background-color: #f3f5f8;
}

.emotion-1:focus-within {
  box-shadow: 0 0 0 0.125rem #1451dc;
  background-color: #e7ebf2;
}

.emotion-2 {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  vertical-align: top;
  width: -webkit-fill-available;
  width: -moz-available;
  width: fill-available;
  padding: 0.5rem;
}

.emotion-2>div {
  position: relative;
}

.emotion-3 {
  width: 100%;
}

.emotion-4 {
  background: transparent;
  border: none;
  color: #0f0f17;
  display: block;
  position: relative;
  z-index: 1;
  font-size: 0.9375rem;
  text-overflow: ellipsis;
  width: 9.375rem;
  min-width: 9.375rem;
  resize: both;
}

.emotion-4+label {
  font-size: 0.9375rem;
}

.emotion-4:focus {
  outline: none;
}

.emotion-4::-webkit-input-placeholder {
  color: #5f6c85;
}

.emotion-4::-moz-placeholder {
  color: #5f6c85;
}

.emotion-4:-ms-input-placeholder {
  color: #5f6c85;
}

.emotion-4::placeholder {
  color: #5f6c85;
}

.emotion-4:not(:focus):placeholder-shown+label {
  font-weight: normal;
}

.emotion-4:focus+label,
.emotion-4:not(:placeholder-shown)+label {
  -webkit-transform: translate(0.1875rem, -35%) scale(0.8);
  -moz-transform: translate(0.1875rem, -35%) scale(0.8);
  -ms-transform: translate(0.1875rem, -35%) scale(0.8);
  transform: translate(0.1875rem, -35%) scale(0.8);
  font-weight: 700;
}

.emotion-4:disabled {
  cursor: not-allowed;
}

<div
  style={
    Object {
      "borderRadius": 10,
      "flex": 1,
      "flexDirection": "column",
      "padding": 5,
      "position": "relative",
      "width": "100%",
    }
  }
>
  <div
    style={
      Object {
        "margin": 15,
      }
    }
  >
    <div
      className="emotion-0"
    >
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <div
          className="emotion-1"
        >
          <div
            className="emotion-2"
          >
            <div
              className="emotion-3"
            >
              <textarea
                className="emotion-4"
                placeholder="placeholder here"
                required={false}
              />
            </div>
          </div>
        </div>
      </div>
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <div
          className="emotion-1"
        >
          <div
            className="emotion-2"
          >
            <div
              className="emotion-3"
            >
              <textarea
                className="emotion-4"
                placeholder="placeholder here"
                required={false}
              />
            </div>
          </div>
        </div>
      </div>
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <div
          className="emotion-1"
        >
          <div
            className="emotion-2"
          >
            <div
              className="emotion-3"
            >
              <textarea
                className="emotion-4"
                placeholder="placeholder here"
                required={false}
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Design System/TextArea Text Area with KNOBS 1`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  -webkit-transition: background-color 0.25s,box-shadow 0.25s,border-color 0.25s;
  transition: background-color 0.25s,box-shadow 0.25s,border-color 0.25s;
  box-shadow: 0 0 0 0.0625rem #cfd7e5;
  border-radius: 0.25rem;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  opacity: 1;
  cursor: auto;
  min-width: 9.375rem;
  height: auto;
  background-color: white;
  width: auto;
}

.emotion-1:hover {
  background-color: #f3f5f8;
}

.emotion-1:focus-within {
  box-shadow: 0 0 0 0.125rem #1451dc;
  background-color: #e7ebf2;
}

.emotion-2 {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  vertical-align: top;
  width: -webkit-fill-available;
  width: -moz-available;
  width: fill-available;
  padding: 0.5rem;
}

.emotion-2>div {
  position: relative;
}

.emotion-3 {
  width: 100%;
}

.emotion-4 {
  background: transparent;
  border: none;
  color: #0f0f17;
  display: block;
  position: relative;
  z-index: 1;
  font-size: 0.9375rem;
  text-overflow: ellipsis;
  width: 9.375rem;
  min-width: 9.375rem;
  resize: both;
}

.emotion-4+label {
  font-size: 0.9375rem;
}

.emotion-4:focus {
  outline: none;
}

.emotion-4::-webkit-input-placeholder {
  color: #5f6c85;
}

.emotion-4::-moz-placeholder {
  color: #5f6c85;
}

.emotion-4:-ms-input-placeholder {
  color: #5f6c85;
}

.emotion-4::placeholder {
  color: #5f6c85;
}

.emotion-4:not(:focus):placeholder-shown+label {
  font-weight: normal;
}

.emotion-4:focus+label,
.emotion-4:not(:placeholder-shown)+label {
  -webkit-transform: translate(0.1875rem, -35%) scale(0.8);
  -moz-transform: translate(0.1875rem, -35%) scale(0.8);
  -ms-transform: translate(0.1875rem, -35%) scale(0.8);
  transform: translate(0.1875rem, -35%) scale(0.8);
  font-weight: 700;
}

.emotion-4:disabled {
  cursor: not-allowed;
}

<div
  style={
    Object {
      "borderRadius": 10,
      "flex": 1,
      "flexDirection": "column",
      "padding": 5,
      "position": "relative",
      "width": "100%",
    }
  }
>
  <div
    style={
      Object {
        "margin": 15,
      }
    }
  >
    <div
      className="emotion-0"
    >
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <div
          className="emotion-1"
        >
          <div
            className="emotion-2"
          >
            <div
              className="emotion-3"
            >
              <textarea
                className="emotion-4"
                disabled={false}
                placeholder="Label"
                required={false}
                status="normal"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Design System/TextArea TextArea disabled with label 1`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  -webkit-transition: background-color 0.25s,box-shadow 0.25s,border-color 0.25s;
  transition: background-color 0.25s,box-shadow 0.25s,border-color 0.25s;
  box-shadow: 0 0 0 0.0625rem #cfd7e5;
  border-radius: 0.25rem;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  opacity: 0.5;
  cursor: not-allowed;
  min-width: 9.375rem;
  height: auto;
  background-color: white;
  width: auto;
}

.emotion-1:focus-within {
  box-shadow: 0 0 0 0.0625rem transparent;
}

.emotion-2 {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  vertical-align: top;
  width: -webkit-fill-available;
  width: -moz-available;
  width: fill-available;
  padding: 0.5rem;
}

.emotion-2>div {
  position: relative;
}

.emotion-3 {
  width: 100%;
}

.emotion-4 {
  background: transparent;
  border: none;
  color: #0f0f17;
  display: block;
  position: relative;
  z-index: 1;
  font-size: 0.9375rem;
  text-overflow: ellipsis;
  width: 9.375rem;
  min-width: 9.375rem;
  resize: none;
}

.emotion-4+label {
  font-size: 0.9375rem;
}

.emotion-4:focus {
  outline: none;
}

.emotion-4::-webkit-input-placeholder {
  color: #5f6c85;
}

.emotion-4::-moz-placeholder {
  color: #5f6c85;
}

.emotion-4:-ms-input-placeholder {
  color: #5f6c85;
}

.emotion-4::placeholder {
  color: #5f6c85;
}

.emotion-4:not(:focus):placeholder-shown+label {
  font-weight: normal;
}

.emotion-4:focus+label,
.emotion-4:not(:placeholder-shown)+label {
  -webkit-transform: translate(0.1875rem, -35%) scale(0.8);
  -moz-transform: translate(0.1875rem, -35%) scale(0.8);
  -ms-transform: translate(0.1875rem, -35%) scale(0.8);
  transform: translate(0.1875rem, -35%) scale(0.8);
  font-weight: 700;
}

.emotion-4:disabled {
  cursor: not-allowed;
}

<div
  style={
    Object {
      "borderRadius": 10,
      "flex": 1,
      "flexDirection": "column",
      "padding": 5,
      "position": "relative",
      "width": "100%",
    }
  }
>
  <div
    style={
      Object {
        "margin": 15,
      }
    }
  >
    <div
      className="emotion-0"
    >
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <div
          className="emotion-1"
        >
          <div
            className="emotion-2"
          >
            <div
              className="emotion-3"
            >
              <textarea
                className="emotion-4"
                disabled={true}
                placeholder="Label"
                required={false}
              />
            </div>
          </div>
        </div>
      </div>
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <div
          className="emotion-1"
        >
          <div
            className="emotion-2"
          >
            <div
              className="emotion-3"
            >
              <textarea
                className="emotion-4"
                disabled={true}
                placeholder="Label"
                required={false}
              />
            </div>
          </div>
        </div>
      </div>
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <div
          className="emotion-1"
        >
          <div
            className="emotion-2"
          >
            <div
              className="emotion-3"
            >
              <textarea
                className="emotion-4"
                disabled={true}
                placeholder="Label"
                required={false}
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Design System/TextArea TextArea with label and statuses 1`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  -webkit-transition: background-color 0.25s,box-shadow 0.25s,border-color 0.25s;
  transition: background-color 0.25s,box-shadow 0.25s,border-color 0.25s;
  box-shadow: 0 0 0 0.0625rem #e51460;
  border-radius: 0.25rem;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  opacity: 1;
  cursor: auto;
  min-width: 9.375rem;
  height: auto;
  background-color: white;
  width: auto;
}

.emotion-2:hover {
  background-color: #f3f5f8;
}

.emotion-2:focus-within {
  box-shadow: 0 0 0 0.125rem #e51460;
  background-color: #e7ebf2;
}

.emotion-3 {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  vertical-align: top;
  width: -webkit-fill-available;
  width: -moz-available;
  width: fill-available;
  padding: 0.5rem;
}

.emotion-3>div {
  position: relative;
}

.emotion-4 {
  width: 100%;
}

.emotion-5 {
  background: transparent;
  border: none;
  color: #0f0f17;
  display: block;
  position: relative;
  z-index: 1;
  font-size: 0.9375rem;
  text-overflow: ellipsis;
  width: 9.375rem;
  min-width: 9.375rem;
  resize: both;
}

.emotion-5+label {
  font-size: 0.9375rem;
}

.emotion-5:focus {
  outline: none;
}

.emotion-5::-webkit-input-placeholder {
  color: #5f6c85;
}

.emotion-5::-moz-placeholder {
  color: #5f6c85;
}

.emotion-5:-ms-input-placeholder {
  color: #5f6c85;
}

.emotion-5::placeholder {
  color: #5f6c85;
}

.emotion-5:not(:focus):placeholder-shown+label {
  font-weight: normal;
}

.emotion-5:focus+label,
.emotion-5:not(:placeholder-shown)+label {
  -webkit-transform: translate(0.1875rem, -35%) scale(0.8);
  -moz-transform: translate(0.1875rem, -35%) scale(0.8);
  -ms-transform: translate(0.1875rem, -35%) scale(0.8);
  transform: translate(0.1875rem, -35%) scale(0.8);
  font-weight: 700;
}

.emotion-5:disabled {
  cursor: not-allowed;
}

.emotion-6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  color: #e51460;
  font-size: 0.75rem;
  line-height: 1;
  padding: 0.5rem 0 0;
}

.emotion-6 svg {
  padding: 0 0.125rem;
}

.emotion-6 span {
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  padding: 0 0.125rem;
}

.emotion-7 {
  padding: 0.125rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-8 {
  fill: #FF176B;
  width: 0.75rem;
  height: 0.75rem;
}

.emotion-8 path {
  fill: #FF176B;
}

.emotion-24 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  -webkit-transition: background-color 0.25s,box-shadow 0.25s,border-color 0.25s;
  transition: background-color 0.25s,box-shadow 0.25s,border-color 0.25s;
  box-shadow: 0 0 0 0.0625rem #cfd7e5;
  border-radius: 0.25rem;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  opacity: 1;
  cursor: auto;
  min-width: 9.375rem;
  height: auto;
  background-color: white;
  width: auto;
}

.emotion-24:hover {
  background-color: #f3f5f8;
}

.emotion-24:focus-within {
  box-shadow: 0 0 0 0.125rem #1451dc;
  background-color: #e7ebf2;
}

.emotion-28 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  color: #5f6c85;
  font-size: 0.75rem;
  line-height: 1;
  padding: 0.5rem 0 0;
}

.emotion-28 svg {
  padding: 0 0.125rem;
}

.emotion-28 span {
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  padding: 0 0.125rem;
}

.emotion-30 {
  fill: #5f6c85;
  width: 0.75rem;
  height: 0.75rem;
}

.emotion-30 path {
  fill: #5f6c85;
}

<div
  style={
    Object {
      "borderRadius": 10,
      "flex": 1,
      "flexDirection": "column",
      "padding": 5,
      "position": "relative",
      "width": "100%",
    }
  }
>
  <div
    style={
      Object {
        "margin": 15,
      }
    }
  >
    <div
      className="emotion-0"
    >
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <div
          className="emotion-0"
        >
          <div
            style={
              Object {
                "margin": 5,
              }
            }
          >
            <div
              className="emotion-2"
            >
              <div
                className="emotion-3"
              >
                <div
                  className="emotion-4"
                >
                  <textarea
                    className="emotion-5"
                    placeholder="Label"
                    required={false}
                    status="error"
                  />
                </div>
              </div>
            </div>
            <div
              className="emotion-6"
              data-testid="error"
            >
              <span
                className="emotion-7"
                onClick={[Function]}
              >
                <span
                  className="emotion-8"
                />
              </span>
              Error in Text Area
            </div>
          </div>
          <div
            style={
              Object {
                "margin": 5,
              }
            }
          >
            <div
              className="emotion-2"
            >
              <div
                className="emotion-3"
              >
                <div
                  className="emotion-4"
                >
                  <textarea
                    className="emotion-5"
                    placeholder="Label"
                    required={false}
                    status="error"
                  />
                </div>
              </div>
            </div>
            <div
              className="emotion-6"
              data-testid="error"
            >
              <span
                className="emotion-7"
                onClick={[Function]}
              >
                <span
                  className="emotion-8"
                />
              </span>
              Error in Text Area
            </div>
          </div>
          <div
            style={
              Object {
                "margin": 5,
              }
            }
          >
            <div
              className="emotion-2"
            >
              <div
                className="emotion-3"
              >
                <div
                  className="emotion-4"
                >
                  <textarea
                    className="emotion-5"
                    placeholder="Label"
                    required={false}
                    status="error"
                  />
                </div>
              </div>
            </div>
            <div
              className="emotion-6"
              data-testid="error"
            >
              <span
                className="emotion-7"
                onClick={[Function]}
              >
                <span
                  className="emotion-8"
                />
              </span>
              Error in Text Area
            </div>
          </div>
        </div>
      </div>
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <div
          className="emotion-0"
        >
          <div
            style={
              Object {
                "margin": 5,
              }
            }
          >
            <div
              className="emotion-24"
            >
              <div
                className="emotion-3"
              >
                <div
                  className="emotion-4"
                >
                  <textarea
                    className="emotion-5"
                    placeholder="Label"
                    required={false}
                    status="hint"
                  />
                </div>
              </div>
            </div>
            <div
              className="emotion-28"
              data-testid="error"
            >
              <span
                className="emotion-7"
                onClick={[Function]}
              >
                <span
                  className="emotion-30"
                />
              </span>
              Error in Text Area
            </div>
          </div>
          <div
            style={
              Object {
                "margin": 5,
              }
            }
          >
            <div
              className="emotion-24"
            >
              <div
                className="emotion-3"
              >
                <div
                  className="emotion-4"
                >
                  <textarea
                    className="emotion-5"
                    placeholder="Label"
                    required={false}
                    status="hint"
                  />
                </div>
              </div>
            </div>
            <div
              className="emotion-28"
              data-testid="error"
            >
              <span
                className="emotion-7"
                onClick={[Function]}
              >
                <span
                  className="emotion-30"
                />
              </span>
              Error in Text Area
            </div>
          </div>
          <div
            style={
              Object {
                "margin": 5,
              }
            }
          >
            <div
              className="emotion-24"
            >
              <div
                className="emotion-3"
              >
                <div
                  className="emotion-4"
                >
                  <textarea
                    className="emotion-5"
                    placeholder="Label"
                    required={false}
                    status="hint"
                  />
                </div>
              </div>
            </div>
            <div
              className="emotion-28"
              data-testid="error"
            >
              <span
                className="emotion-7"
                onClick={[Function]}
              >
                <span
                  className="emotion-30"
                />
              </span>
              Error in Text Area
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
